--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,23 @@
 # main links
 main:
   - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+    url: https://icp.me/
+  - title: "About"
+    url: /about/
+  - title: "Sample Posts"
+    url: /year-archive/
+    
+  - title: "Sample Collections"
+   url: /collection-archive/
+   
+  - title: "Sitemap"
+  url: /sitemap/
+  
+  - title: about
+  url: /about
+
+  - title: all posts
+  url: /posts
+
+  - title: projects
+  url: https://www.abhinav.co
