--- a/_config.yml
+++ b/_config.yml
@@ -217,9 +217,9 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
+permalink: /:title.html
 paginate: 8 # amount of posts to show
-paginate_path: /:title.html
+paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
