--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description              : "An amazing website."
 url                      : "https://icp.me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/minimal" # the subpath of your site, e.g. "/blog"
 repository               : "yipianye" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+# teaser随机文章
 teaser                   : "/assets/images/500x300.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/88x88.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "for no title" # overrides the website title displayed in the masthead, use " " for no title
