--- a/_config.yml
+++ b/_config.yml
@@ -290,7 +290,8 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
-      share: true
+   #  share: 社会分析 开关
+      share: # true
       related: true
 
 theme: jekyll-theme-slate
